--- a/docs/modules/ROOT/pages/reactive/integrations/rsocket.adoc
+++ b/docs/modules/ROOT/pages/reactive/integrations/rsocket.adoc
@@ -14,8 +14,10 @@ You can find a few sample applications that demonstrate the code below:
 
 You can find a minimal RSocket Security configuration below:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 -----
 @Configuration
@@ -34,7 +36,8 @@ public class HelloRSocketSecurityConfig {
 }
 -----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Configuration
@@ -51,7 +54,7 @@ open class HelloRSocketSecurityConfig {
     }
 }
 ----
-====
+======
 
 This configuration enables <<rsocket-authentication-simple,simple authentication>> and sets up <<rsocket-authorization,rsocket-authorization>> to require an authenticated user for any request.
 
@@ -107,8 +110,10 @@ See `RSocketSecurity.basicAuthentication(Customizer)` for setting it up.
 The RSocket receiver can decode the credentials using `AuthenticationPayloadExchangeConverter` which is automatically setup using the `simpleAuthentication` portion of the DSL.
 An explicit configuration can be found below.
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Bean
@@ -124,7 +129,8 @@ PayloadSocketAcceptorInterceptor rsocketInterceptor(RSocketSecurity rsocket) {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Bean
@@ -138,30 +144,35 @@ open fun rsocketInterceptor(rsocket: RSocketSecurity): PayloadSocketAcceptorInte
     return rsocket.build()
 }
 ----
-====
+======
 
 The RSocket sender can send credentials using `SimpleAuthenticationEncoder` which can be added to Spring's `RSocketStrategies`.
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 RSocketStrategies.Builder strategies = ...;
 strategies.encoder(new SimpleAuthenticationEncoder());
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 var strategies: RSocketStrategies.Builder = ...
 strategies.encoder(SimpleAuthenticationEncoder())
 ----
-====
+======
 
 It can then be used to send a username and password to the receiver in the setup:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 MimeType authenticationMimeType =
@@ -173,7 +184,8 @@ Mono<RSocketRequester> requester = RSocketRequester.builder()
 	.connectTcp(host, port);
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 val authenticationMimeType: MimeType =
@@ -184,12 +196,14 @@ val requester: Mono<RSocketRequester> = RSocketRequester.builder()
     .rsocketStrategies(strategies.build())
     .connectTcp(host, port)
 ----
-====
+======
 
 Alternatively or additionally, a username and password can be sent in a request.
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 Mono<RSocketRequester> requester;
@@ -204,7 +218,8 @@ public Mono<AirportLocation> findRadar(String code) {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 import org.springframework.messaging.rsocket.retrieveMono
@@ -222,7 +237,7 @@ open fun findRadar(code: String): Mono<AirportLocation> {
     }
 }
 ----
-====
+======
 
 [[rsocket-authentication-jwt]]
 === JWT
@@ -233,8 +248,10 @@ The support comes in the form of authenticating a JWT (determining the JWT is va
 The RSocket receiver can decode the credentials using `BearerPayloadExchangeConverter` which is automatically setup using the `jwt` portion of the DSL.
 An example configuration can be found below:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Bean
@@ -250,7 +267,8 @@ PayloadSocketAcceptorInterceptor rsocketInterceptor(RSocketSecurity rsocket) {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Bean
@@ -264,13 +282,15 @@ fun rsocketInterceptor(rsocket: RSocketSecurity): PayloadSocketAcceptorIntercept
     return rsocket.build()
 }
 ----
-====
+======
 
 The configuration above relies on the existence of a `ReactiveJwtDecoder` `@Bean` being present.
 An example of creating one from the issuer can be found below:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Bean
@@ -280,7 +300,8 @@ ReactiveJwtDecoder jwtDecoder() {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Bean
@@ -289,13 +310,15 @@ fun jwtDecoder(): ReactiveJwtDecoder {
         .fromIssuerLocation("https://example.com/auth/realms/demo")
 }
 ----
-====
+======
 
 The RSocket sender does not need to do anything special to send the token because the value is just a simple String.
 For example, the token can be sent at setup time:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 MimeType authenticationMimeType =
@@ -306,7 +329,8 @@ Mono<RSocketRequester> requester = RSocketRequester.builder()
 	.connectTcp(host, port);
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 val authenticationMimeType: MimeType =
@@ -317,12 +341,14 @@ val requester = RSocketRequester.builder()
     .setupMetadata(token, authenticationMimeType)
     .connectTcp(host, port)
 ----
-====
+======
 
 Alternatively or additionally, the token can be sent in a request.
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 MimeType authenticationMimeType =
@@ -339,7 +365,8 @@ public Mono<AirportLocation> findRadar(String code) {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 val authenticationMimeType: MimeType =
@@ -355,7 +382,7 @@ open fun findRadar(code: String): Mono<AirportLocation> {
     }
 }
 ----
-====
+======
 
 [[rsocket-authorization]]
 == RSocket Authorization
@@ -364,8 +391,10 @@ RSocket authorization is performed with `AuthorizationPayloadInterceptor` which 
 The DSL can be used to setup authorization rules based upon the `PayloadExchange`.
 An example configuration can be found below:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 rsocket
@@ -381,7 +410,9 @@ rsocket
 			.anyExchange().permitAll() // <6>
 	);
 ----
-.Kotlin
+
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 rsocket
@@ -397,7 +428,7 @@ rsocket
             .anyExchange().permitAll()
     } // <6>
 ----
-====
+======
 <1> Setting up a connection requires the authority `ROLE_SETUP`
 <2> If the route is `fetch.profile.me` authorization only requires the user be authenticated
 <3> In this rule we setup a custom matcher where authorization requires the user to have the authority `ROLE_CUSTOM`
