--- a/docs/modules/ROOT/pages/servlet/authentication/passwords/jdbc.adoc
+++ b/docs/modules/ROOT/pages/servlet/authentication/passwords/jdbc.adoc
@@ -30,7 +30,6 @@ The default schema is also exposed as a classpath resource named `org/springfram
 ====
 
 .Default User Schema
-====
 [source,sql]
 ----
 create table users(
@@ -46,13 +45,11 @@ create table authorities (
 );
 create unique index ix_auth_username on authorities (username,authority);
 ----
-====
 
 Oracle is a popular database choice, but requires a slightly different schema.
 You can find the default Oracle Schema for users below.
 
 .Default User Schema for Oracle Databases
-====
 [source,sql]
 ----
 CREATE TABLE USERS (
@@ -69,7 +66,6 @@ CREATE TABLE AUTHORITIES (
 ALTER TABLE AUTHORITIES ADD CONSTRAINT AUTHORITIES_UNIQUE UNIQUE (USERNAME, AUTHORITY);
 ALTER TABLE AUTHORITIES ADD CONSTRAINT AUTHORITIES_FK1 FOREIGN KEY (USERNAME) REFERENCES USERS (USERNAME) ENABLE;
 ----
-====
 
 [[servlet-authentication-jdbc-schema-group]]
 === Group Schema
@@ -78,7 +74,6 @@ If your application is leveraging groups, you will need to provide the groups sc
 The default schema for groups can be found below.
 
 .Default Group Schema
-====
 [source,sql]
 ----
 create table groups (
@@ -99,7 +94,6 @@ create table group_members (
 	constraint fk_group_members_group foreign key(group_id) references groups(id)
 );
 ----
-====
 
 [[servlet-authentication-jdbc-datasource]]
 == Setting up a DataSource
@@ -108,8 +102,10 @@ Before we configure `JdbcUserDetailsManager`, we must create a `DataSource`.
 In our example, we will setup an https://docs.spring.io/spring-framework/docs/current/spring-framework-reference/data-access.html#jdbc-embedded-database-support[embedded DataSource] that is initialized with the <<servlet-authentication-jdbc-schema,default user schema>>.
 
 .Embedded Data Source
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Bean
@@ -121,7 +117,8 @@ DataSource dataSource() {
 }
 ----
 
-.XML
+XML::
++
 [source,xml,role="secondary"]
 ----
 <jdbc:embedded-database>
@@ -129,7 +126,8 @@ DataSource dataSource() {
 </jdbc:embedded-database>
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Bean
@@ -140,7 +138,7 @@ fun dataSource(): DataSource {
         .build()
 }
 ----
-====
+======
 
 In a production environment, you will want to ensure you setup a connection to an external database.
 
@@ -151,9 +149,11 @@ In this sample we use xref:features/authentication/password-storage.adoc#authent
 See the xref:features/authentication/password-storage.adoc#authentication-password-storage[PasswordEncoder] section for more details about how to store passwords.
 
 .JdbcUserDetailsManager
-====
 
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary",attrs="-attributes"]
 ----
 @Bean
@@ -175,7 +175,8 @@ UserDetailsManager users(DataSource dataSource) {
 }
 ----
 
-.XML
+XML::
++
 [source,xml,role="secondary",attrs="-attributes"]
 ----
 <jdbc-user-service>
@@ -188,7 +189,8 @@ UserDetailsManager users(DataSource dataSource) {
 </jdbc-user-service>
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary",attrs="-attributes"]
 ----
 @Bean
@@ -209,4 +211,4 @@ fun users(dataSource: DataSource): UserDetailsManager {
     return users
 }
 ----
-====
+======
