--- a/docs/modules/ROOT/pages/servlet/authentication/passwords/user-details-service.adoc
+++ b/docs/modules/ROOT/pages/servlet/authentication/passwords/user-details-service.adoc
@@ -10,8 +10,10 @@ For example, the following will customize authentication assuming that `CustomUs
 NOTE: This is only used if the `AuthenticationManagerBuilder` has not been populated and no `AuthenticationProviderBean` is defined.
 
 .Custom UserDetailsService Bean
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Bean
@@ -20,18 +22,20 @@ CustomUserDetailsService customUserDetailsService() {
 }
 ----
 
-.XML
+XML::
++
 [source,java,role="secondary"]
 ----
 <b:bean class="example.CustomUserDetailsService"/>
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Bean
 fun customUserDetailsService() = CustomUserDetailsService()
 ----
-====
+======
 
 // FIXME: Add CustomUserDetails example with links to @AuthenticationPrincipal
