--- a/docs/modules/ROOT/pages/servlet/authentication/preauth.adoc
+++ b/docs/modules/ROOT/pages/servlet/authentication/preauth.adoc
@@ -30,8 +30,10 @@ This class will check the current contents of the security context and, if empty
 Subclasses override the following methods to obtain this information:
 
 .Override AbstractPreAuthenticatedProcessingFilter
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 protected abstract Object getPreAuthenticatedPrincipal(HttpServletRequest request);
@@ -39,14 +41,15 @@ protected abstract Object getPreAuthenticatedPrincipal(HttpServletRequest reques
 protected abstract Object getPreAuthenticatedCredentials(HttpServletRequest request);
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 protected abstract fun getPreAuthenticatedPrincipal(request: HttpServletRequest): Any?
 
 protected abstract fun getPreAuthenticatedCredentials(request: HttpServletRequest): Any?
 ----
-====
+======
 
 
 After calling these, the filter will create a `PreAuthenticatedAuthenticationToken` containing the returned data and submit it for authentication.
