--- a/docs/modules/ROOT/pages/servlet/authorization/method-security.adoc
+++ b/docs/modules/ROOT/pages/servlet/authorization/method-security.adoc
@@ -28,8 +28,10 @@ For earlier versions, please read about similar support with <<jc-enable-global-
 For example, the following would enable Spring Security's `@PreAuthorize` annotation:
 
 .Method Security Configuration
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableMethodSecurity
@@ -38,7 +40,8 @@ public class MethodSecurityConfig {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableMethodSecurity
@@ -47,20 +50,23 @@ class MethodSecurityConfig {
 }
 ----
 
-.Xml
+Xml::
++
 [source,xml,role="secondary"]
 ----
 <sec:method-security/>
 ----
-====
+======
 
 Adding an annotation to a method (on a class or interface) would then limit the access to that method accordingly.
 Spring Security's native annotation support defines a set of attributes for the method.
 These will be passed to the `DefaultAuthorizationMethodInterceptorChain` for it to make the actual decision:
 
 .Method Security Annotation Usage
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 public interface BankService {
@@ -75,7 +81,8 @@ public interface BankService {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 interface BankService {
@@ -89,13 +96,15 @@ interface BankService {
 	fun post(account : Account, amount : Double) : Account
 }
 ----
-====
+======
 
 You can enable support for Spring Security's `@Secured` annotation using:
 
 .@Secured Configuration
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableMethodSecurity(securedEnabled = true)
@@ -104,7 +113,8 @@ public class MethodSecurityConfig {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableMethodSecurity(securedEnabled = true)
@@ -113,18 +123,21 @@ class MethodSecurityConfig {
 }
 ----
 
-.Xml
+Xml::
++
 [source,xml,role="secondary"]
 ----
 <sec:method-security secured-enabled="true"/>
 ----
-====
+======
 
 or JSR-250 using:
 
 .JSR-250 Configuration
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableMethodSecurity(jsr250Enabled = true)
@@ -133,7 +146,8 @@ public class MethodSecurityConfig {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableMethodSecurity(jsr250Enabled = true)
@@ -142,12 +156,13 @@ class MethodSecurityConfig {
 }
 ----
 
-.Xml
+Xml::
++
 [source,xml,role="secondary"]
 ----
 <sec:method-security jsr250-enabled="true"/>
 ----
-====
+======
 
 === Customizing Authorization
 
@@ -157,8 +172,10 @@ Spring Security's `@PreAuthorize`, `@PostAuthorize`, `@PreFilter`, and `@PostFil
 If you need to customize the way that expressions are handled, you can expose a custom `MethodSecurityExpressionHandler`, like so:
 
 .Custom MethodSecurityExpressionHandler
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Bean
@@ -169,7 +186,8 @@ static MethodSecurityExpressionHandler methodSecurityExpressionHandler() {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 companion object {
@@ -182,7 +200,8 @@ companion object {
 }
 ----
 
-.Xml
+Xml::
++
 [source,xml,role="secondary"]
 ----
 <sec:method-security>
@@ -194,7 +213,7 @@ companion object {
 	<property name="trustResolver" ref="myCustomTrustResolver"/>
 </bean>
 ----
-====
+======
 
 [TIP]
 ====
@@ -207,8 +226,10 @@ Also, for role-based authorization, Spring Security adds a default `ROLE_` prefi
 You can configure the authorization rules to use a different prefix by exposing a `GrantedAuthorityDefaults` bean, like so:
 
 .Custom MethodSecurityExpressionHandler
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Bean
@@ -217,7 +238,8 @@ static GrantedAuthorityDefaults grantedAuthorityDefaults() {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 companion object {
@@ -228,7 +250,8 @@ companion object {
 }
 ----
 
-.Xml
+Xml::
++
 [source,xml,role="secondary"]
 ----
 <sec:method-security/>
@@ -237,7 +260,7 @@ companion object {
 	<constructor-arg value="MYPREFIX_"/>
 </bean>
 ----
-====
+======
 
 [TIP]
 ====
@@ -260,8 +283,10 @@ If that authorization denies access, the value is not returned, and an `AccessDe
 To recreate what adding `@EnableMethodSecurity` does by default, you would publish the following configuration:
 
 .Full Pre-post Method Security Configuration
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableMethodSecurity(prePostEnabled = false)
@@ -292,7 +317,8 @@ class MethodSecurityConfig {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableMethodSecurity(prePostEnabled = false)
@@ -323,7 +349,8 @@ class MethodSecurityConfig {
 }
 ----
 
-.Xml
+Xml::
++
 [source,xml,role="secondary"]
 ----
 <sec:method-security pre-post-enabled="false"/>
@@ -341,15 +368,17 @@ class MethodSecurityConfig {
 <bean id="postFilterAuthorizationMethodInterceptor"
 		class="org.springframework.security.authorization.method.PostFilterAuthorizationMethodInterceptor"/>
 ----
-====
+======
 
 Notice that Spring Security's method security is built using Spring AOP.
 So, interceptors are invoked based on the order specified.
 This can be customized by calling `setOrder` on the interceptor instances like so:
 
 .Publish Custom Advisor
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Bean
@@ -361,7 +390,8 @@ Advisor postFilterAuthorizationMethodInterceptor() {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Bean
@@ -373,7 +403,8 @@ fun postFilterAuthorizationMethodInterceptor() : Advisor {
 }
 ----
 
-.Xml
+Xml::
++
 [source,xml,role="secondary"]
 ----
 <bean id="postFilterAuthorizationMethodInterceptor"
@@ -382,14 +413,16 @@ fun postFilterAuthorizationMethodInterceptor() : Advisor {
 			value="#{T(org.springframework.security.authorization.method.AuthorizationInterceptorsOrder).POST_AUTHORIZE.getOrder() -1}"/>
 </bean>
 ----
-====
+======
 
 You may want to only support `@PreAuthorize` in your application, in which case you can do the following:
 
 
 .Only @PreAuthorize Configuration
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableMethodSecurity(prePostEnabled = false)
@@ -402,7 +435,8 @@ class MethodSecurityConfig {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableMethodSecurity(prePostEnabled = false)
@@ -415,7 +449,8 @@ class MethodSecurityConfig {
 }
 ----
 
-.Xml
+Xml::
++
 [source,xml,role="secondary"]
 ----
 <sec:method-security pre-post-enabled="false"/>
@@ -426,7 +461,7 @@ class MethodSecurityConfig {
 	class="org.springframework.security.authorization.method.AuthorizationManagerBeforeMethodInterceptor"
 	factory-method="preAuthorize"/>
 ----
-====
+======
 
 Or, you may have a custom before-method `AuthorizationManager` that you want to add to the list.
 
@@ -435,9 +470,11 @@ In this case, you will need to tell Spring Security both the `AuthorizationManag
 Thus, you can configure Spring Security to invoke your `AuthorizationManager` in between `@PreAuthorize` and `@PostAuthorize` like so:
 
 .Custom Before Advisor
-====
 
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableMethodSecurity
@@ -455,7 +492,8 @@ class MethodSecurityConfig {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableMethodSecurity
@@ -473,7 +511,8 @@ class MethodSecurityConfig {
 }
 ----
 
-.Xml
+Xml::
++
 [source,xml,role="secondary"]
 ----
 <sec:method-security/>
@@ -495,7 +534,7 @@ class MethodSecurityConfig {
 			value="#{T(org.springframework.security.authorization.method.AuthorizationInterceptorsOrder).PRE_AUTHORIZE_ADVISOR_ORDER.getOrder() + 1}"/>
 </bean>
 ----
-====
+======
 
 [TIP]
 ====
@@ -508,8 +547,10 @@ After-method authorization is generally concerned with analysing the return valu
 For example, you might have a method that confirms that the account requested actually belongs to the logged-in user like so:
 
 .@PostAuthorize example
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 public interface BankService {
@@ -520,7 +561,8 @@ public interface BankService {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 interface BankService {
@@ -530,7 +572,7 @@ interface BankService {
 	fun readAccount(id : Long) : Account
 }
 ----
-====
+======
 
 You can supply your own `AuthorizationMethodInterceptor` to customize how access to the return value is evaluated.
 
@@ -538,8 +580,10 @@ For example, if you have your own custom annotation, you can configure it like s
 
 
 .Custom After Advisor
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableMethodSecurity
@@ -555,7 +599,8 @@ class MethodSecurityConfig {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableMethodSecurity
@@ -571,7 +616,8 @@ class MethodSecurityConfig {
 }
 ----
 
-.Xml
+Xml::
++
 [source,xml,role="secondary"]
 ----
 <sec:method-security/>
@@ -593,7 +639,7 @@ class MethodSecurityConfig {
 		value="#{T(org.springframework.security.authorization.method.AuthorizationInterceptorsOrder).PRE_AUTHORIZE_ADVISOR_ORDER.getOrder() + 1}"/>
 </bean>
 ----
-====
+======
 
 and it will be invoked after the `@PostAuthorize` interceptor.
 
@@ -603,8 +649,10 @@ and it will be invoked after the `@PostAuthorize` interceptor.
 We can enable annotation-based security using the `@EnableGlobalMethodSecurity` annotation on any `@Configuration` instance.
 For example, the following would enable Spring Security's `@Secured` annotation.
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableGlobalMethodSecurity(securedEnabled = true)
@@ -613,7 +661,8 @@ public class MethodSecurityConfig {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableGlobalMethodSecurity(securedEnabled = true)
@@ -621,14 +670,16 @@ open class MethodSecurityConfig {
 	// ...
 }
 ----
-====
+======
 
 Adding an annotation to a method (on a class or interface) would then limit the access to that method accordingly.
 Spring Security's native annotation support defines a set of attributes for the method.
 These will be passed to the AccessDecisionManager for it to make the actual decision:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 public interface BankService {
@@ -644,7 +695,8 @@ public Account post(Account account, double amount);
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 interface BankService {
@@ -658,12 +710,14 @@ interface BankService {
     fun post(account: Account, amount: Double): Account
 }
 ----
-====
+======
 
 Support for JSR-250 annotations can be enabled using
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableGlobalMethodSecurity(jsr250Enabled = true)
@@ -672,7 +726,8 @@ public class MethodSecurityConfig {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableGlobalMethodSecurity(jsr250Enabled = true)
@@ -680,13 +735,15 @@ open class MethodSecurityConfig {
 	// ...
 }
 ----
-====
+======
 
 These are standards-based and allow simple role-based constraints to be applied but do not have the power Spring Security's native annotations.
 To use the new expression-based syntax, you would use
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableGlobalMethodSecurity(prePostEnabled = true)
@@ -695,7 +752,8 @@ public class MethodSecurityConfig {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableGlobalMethodSecurity(prePostEnabled = true)
@@ -703,12 +761,14 @@ open class MethodSecurityConfig {
 	// ...
 }
 ----
-====
+======
 
 and the equivalent Java code would be
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 public interface BankService {
@@ -724,7 +784,8 @@ public Account post(Account account, double amount);
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 interface BankService {
@@ -738,7 +799,7 @@ interface BankService {
     fun post(account: Account, amount: Double): Account
 }
 ----
-====
+======
 
 == GlobalMethodSecurityConfiguration
 
@@ -746,8 +807,10 @@ Sometimes you may need to perform operations that are more complicated than are 
 For these instances, you can extend the `GlobalMethodSecurityConfiguration` ensuring that the `@EnableGlobalMethodSecurity` annotation is present on your subclass.
 For example, if you wanted to provide a custom `MethodSecurityExpressionHandler`, you could use the following configuration:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableGlobalMethodSecurity(prePostEnabled = true)
@@ -760,7 +823,8 @@ public class MethodSecurityConfig extends GlobalMethodSecurityConfiguration {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableGlobalMethodSecurity(prePostEnabled = true)
@@ -771,7 +835,7 @@ open class MethodSecurityConfig : GlobalMethodSecurityConfiguration() {
     }
 }
 ----
-====
+======
 
 For additional information about methods that can be overridden, refer to the `GlobalMethodSecurityConfiguration` Javadoc.
 
@@ -790,8 +854,10 @@ Adding an annotation to a method (on an class or interface) would then limit the
 Spring Security's native annotation support defines a set of attributes for the method.
 These will be passed to the `AccessDecisionManager` for it to make the actual decision:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 public interface BankService {
@@ -808,7 +874,8 @@ public Account post(Account account, double amount);
 ----
 
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 interface BankService {
@@ -822,7 +889,7 @@ interface BankService {
     fun post(account: Account, amount: Double): Account
 }
 ----
-====
+======
 
 Support for JSR-250 annotations can be enabled using
 
@@ -841,8 +908,10 @@ To use the new expression-based syntax, you would use
 
 and the equivalent Java code would be
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 public interface BankService {
@@ -858,7 +927,8 @@ public Account post(Account account, double amount);
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 interface BankService {
@@ -872,7 +942,7 @@ interface BankService {
     fun post(account: Account, amount: Double): Account
 }
 ----
-====
+======
 
 Expression-based annotations are a good choice if you need to define simple rules that go beyond checking the role names against the user's list of authorities.
 
