--- a/docs/modules/ROOT/pages/servlet/integrations/mvc.adoc
+++ b/docs/modules/ROOT/pages/servlet/integrations/mvc.adoc
@@ -56,8 +56,10 @@ For a `web.xml` this means that you should place your configuration in the `Disp
 
 Below `WebSecurityConfiguration` in placed in the ``DispatcherServlet``s `ApplicationContext`.
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 public class SecurityInitializer extends
@@ -81,7 +83,8 @@ public class SecurityInitializer extends
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 class SecurityInitializer : AbstractAnnotationConfigDispatcherServletInitializer() {
@@ -101,7 +104,7 @@ class SecurityInitializer : AbstractAnnotationConfigDispatcherServletInitializer
     }
 }
 ----
-====
+======
 
 [NOTE]
 ====
@@ -114,26 +117,31 @@ This is what is known as https://en.wikipedia.org/wiki/Defense_in_depth_(computi
 
 Consider a controller that is mapped as follows:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @RequestMapping("/admin")
 public String admin() {
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @RequestMapping("/admin")
 fun admin(): String {
 ----
-====
+======
 
 If we wanted to restrict access to this controller method to admin users, a developer can provide authorization rules by matching on the `HttpServletRequest` with the following:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 protected configure(HttpSecurity http) throws Exception {
@@ -144,7 +152,8 @@ protected configure(HttpSecurity http) throws Exception {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 override fun configure(http: HttpSecurity) {
@@ -155,7 +164,7 @@ override fun configure(http: HttpSecurity) {
     }
 }
 ----
-====
+======
 
 or in XML
 
@@ -177,8 +186,10 @@ Instead, we can leverage Spring Security's `MvcRequestMatcher`.
 The following configuration will protect the same URLs that Spring MVC will match on by using Spring MVC to match on the URL.
 
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 protected configure(HttpSecurity http) throws Exception {
@@ -189,7 +200,8 @@ protected configure(HttpSecurity http) throws Exception {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 override fun configure(http: HttpSecurity) {
@@ -200,7 +212,7 @@ override fun configure(http: HttpSecurity) {
     }
 }
 ----
-====
+======
 
 or in XML
 
@@ -232,8 +244,10 @@ Once `AuthenticationPrincipalArgumentResolver` is properly configured, you can b
 
 Consider a situation where a custom `UserDetailsService` that returns an `Object` that implements `UserDetails` and your own `CustomUser` `Object`. The `CustomUser` of the currently authenticated user could be accessed using the following code:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @RequestMapping("/messages/inbox")
@@ -246,7 +260,8 @@ public ModelAndView findMessagesForUser() {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @RequestMapping("/messages/inbox")
@@ -257,12 +272,14 @@ open fun findMessagesForUser(): ModelAndView {
     // .. find messages for this user and return them ...
 }
 ----
-====
+======
 
 As of Spring Security 3.2 we can resolve the argument more directly by adding an annotation. For example:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -276,7 +293,8 @@ public ModelAndView findMessagesForUser(@AuthenticationPrincipal CustomUser cust
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @RequestMapping("/messages/inbox")
@@ -285,15 +303,17 @@ open fun findMessagesForUser(@AuthenticationPrincipal customUser: CustomUser?): 
     // .. find messages for this user and return them ...
 }
 ----
-====
+======
 
 Sometimes it may be necessary to transform the principal in some way.
 For example, if `CustomUser` needed to be final it could not be extended.
 In this situation the `UserDetailsService` might returns an `Object` that implements `UserDetails` and provides a method named `getCustomUser` to access `CustomUser`.
 For example, it might look like:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 public class CustomUserUserDetails extends User {
@@ -304,7 +324,8 @@ public class CustomUserUserDetails extends User {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 class CustomUserUserDetails(
@@ -316,12 +337,14 @@ class CustomUserUserDetails(
     val customUser: CustomUser? = null
 }
 ----
-====
+======
 
 We could then access the `CustomUser` using a https://docs.spring.io/spring/docs/current/spring-framework-reference/html/expressions.html[SpEL expression] that uses `Authentication.getPrincipal()` as the root object:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -335,7 +358,8 @@ public ModelAndView findMessagesForUser(@AuthenticationPrincipal(expression = "c
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 import org.springframework.security.core.annotation.AuthenticationPrincipal
@@ -348,13 +372,15 @@ open fun findMessagesForUser(@AuthenticationPrincipal(expression = "customUser")
     // .. find messages for this user and return them ...
 }
 ----
-====
+======
 
 We can also refer to Beans in our SpEL expressions.
 For example, the following could be used if we were using JPA to manage our Users and we wanted to modify and save a property on the current user.
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -372,7 +398,8 @@ public ModelAndView updateName(@AuthenticationPrincipal(expression = "@jpaEntity
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 import org.springframework.security.core.annotation.AuthenticationPrincipal
@@ -391,7 +418,7 @@ open fun updateName(
     // ...
 }
 ----
-====
+======
 
 We can further remove our dependency on Spring Security by making `@AuthenticationPrincipal` a meta annotation on our own annotation.
 Below we demonstrate how we could do this on an annotation named `@CurrentUser`.
@@ -399,8 +426,10 @@ Below we demonstrate how we could do this on an annotation named `@CurrentUser`.
 NOTE: It is important to realize that in order to remove the dependency on Spring Security, it is the consuming application that would create `@CurrentUser`.
 This step is not strictly required, but assists in isolating your dependency to Spring Security to a more central location.
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Target({ElementType.PARAMETER, ElementType.TYPE})
@@ -410,7 +439,8 @@ This step is not strictly required, but assists in isolating your dependency to 
 public @interface CurrentUser {}
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Target(AnnotationTarget.VALUE_PARAMETER, AnnotationTarget.TYPE)
@@ -419,13 +449,15 @@ public @interface CurrentUser {}
 @AuthenticationPrincipal
 annotation class CurrentUser
 ----
-====
+======
 
 Now that `@CurrentUser` has been specified, we can use it to signal to resolve our `CustomUser` of the currently authenticated user.
 We have also isolated our dependency on Spring Security to a single file.
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @RequestMapping("/messages/inbox")
@@ -435,7 +467,8 @@ public ModelAndView findMessagesForUser(@CurrentUser CustomUser customUser) {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @RequestMapping("/messages/inbox")
@@ -444,7 +477,7 @@ open fun findMessagesForUser(@CurrentUser customUser: CustomUser?): ModelAndView
     // .. find messages for this user and return them ...
 }
 ----
-====
+======
 
 
 [[mvc-async]]
@@ -454,8 +487,10 @@ Spring Web MVC 3.2+ has excellent support for https://docs.spring.io/spring/docs
 With no additional configuration, Spring Security will automatically setup the `SecurityContext` to the `Thread` that invokes a `Callable` returned by your controllers.
 For example, the following method will automatically have its `Callable` invoked with the `SecurityContext` that was available when the `Callable` was created:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @RequestMapping(method=RequestMethod.POST)
@@ -470,7 +505,8 @@ return new Callable<String>() {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @RequestMapping(method = [RequestMethod.POST])
@@ -481,7 +517,7 @@ open fun processUpload(file: MultipartFile?): Callable<String> {
     }
 }
 ----
-====
+======
 
 [NOTE]
 .Associating SecurityContext to Callable's
@@ -549,8 +585,10 @@ If you use XML based configuration, you must add this yourself.
 
 Once `CsrfTokenArgumentResolver` is properly configured, you can expose the `CsrfToken` to your static HTML based application.
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @RestController
@@ -563,7 +601,8 @@ public class CsrfController {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @RestController
@@ -574,7 +613,7 @@ class CsrfController {
     }
 }
 ----
-====
+======
 
 It is important to keep the `CsrfToken` a secret from other domains.
 This means if you are using https://developer.mozilla.org/en-US/docs/Web/HTTP/Access_control_CORS[Cross Origin Sharing (CORS)], you should **NOT** expose the `CsrfToken` to any external domains.
