--- a/docs/modules/ROOT/pages/servlet/oauth2/client/authorized-clients.adoc
+++ b/docs/modules/ROOT/pages/servlet/oauth2/client/authorized-clients.adoc
@@ -7,8 +7,10 @@
 The `@RegisteredOAuth2AuthorizedClient` annotation provides the capability of resolving a method parameter to an argument value of type `OAuth2AuthorizedClient`.
 This is a convenient alternative compared to accessing the `OAuth2AuthorizedClient` using the `OAuth2AuthorizedClientManager` or `OAuth2AuthorizedClientService`.
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Controller
@@ -25,7 +27,8 @@ public class OAuth2ClientController {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Controller
@@ -40,7 +43,7 @@ class OAuth2ClientController {
     }
 }
 ----
-====
+======
 
 The `@RegisteredOAuth2AuthorizedClient` annotation is handled by `OAuth2AuthorizedClientArgumentResolver`, which directly uses an xref:servlet/oauth2/client/core.adoc#oauth2Client-authorized-manager-provider[`OAuth2AuthorizedClientManager`] and therefore inherits it's capabilities.
 
@@ -61,8 +64,10 @@ It directly uses an xref:servlet/oauth2/client/core.adoc#oauth2Client-authorized
 
 The following code shows an example of how to configure `WebClient` with OAuth 2.0 Client support:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Bean
@@ -75,7 +80,8 @@ WebClient webClient(OAuth2AuthorizedClientManager authorizedClientManager) {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Bean
@@ -86,7 +92,7 @@ fun webClient(authorizedClientManager: OAuth2AuthorizedClientManager?): WebClien
             .build()
 }
 ----
-====
+======
 
 === Providing the Authorized Client
 
@@ -94,8 +100,10 @@ The `ServletOAuth2AuthorizedClientExchangeFilterFunction` determines the client 
 
 The following code shows how to set an `OAuth2AuthorizedClient` as a request attribute:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @GetMapping("/")
@@ -116,7 +124,8 @@ public String index(@RegisteredOAuth2AuthorizedClient("okta") OAuth2AuthorizedCl
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @GetMapping("/")
@@ -135,14 +144,16 @@ fun index(@RegisteredOAuth2AuthorizedClient("okta") authorizedClient: OAuth2Auth
     return "index"
 }
 ----
-====
+======
 
 <1> `oauth2AuthorizedClient()` is a `static` method in `ServletOAuth2AuthorizedClientExchangeFilterFunction`.
 
 The following code shows how to set the `ClientRegistration.getRegistrationId()` as a request attribute:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @GetMapping("/")
@@ -163,7 +174,8 @@ public String index() {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @GetMapping("/")
@@ -183,7 +195,7 @@ fun index(): String {
     return "index"
 }
 ----
-====
+======
 <1> `clientRegistrationId()` is a `static` method in `ServletOAuth2AuthorizedClientExchangeFilterFunction`.
 
 
@@ -195,8 +207,10 @@ If `setDefaultOAuth2AuthorizedClient(true)` is configured and the user has authe
 
 The following code shows the specific configuration:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Bean
@@ -210,7 +224,8 @@ WebClient webClient(OAuth2AuthorizedClientManager authorizedClientManager) {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Bean
@@ -222,7 +237,7 @@ fun webClient(authorizedClientManager: OAuth2AuthorizedClientManager?): WebClien
             .build()
 }
 ----
-====
+======
 
 [WARNING]
 It is recommended to be cautious with this feature since all HTTP requests will receive the access token.
@@ -231,8 +246,10 @@ Alternatively, if `setDefaultClientRegistrationId("okta")` is configured with a 
 
 The following code shows the specific configuration:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Bean
@@ -246,7 +263,8 @@ WebClient webClient(OAuth2AuthorizedClientManager authorizedClientManager) {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Bean
@@ -258,7 +276,7 @@ fun webClient(authorizedClientManager: OAuth2AuthorizedClientManager?): WebClien
             .build()
 }
 ----
-====
+======
 
 [WARNING]
 It is recommended to be cautious with this feature since all HTTP requests will receive the access token.
