--- a/docs/modules/ROOT/pages/reactive/test/web/authentication.adoc
+++ b/docs/modules/ROOT/pages/reactive/test/web/authentication.adoc
@@ -3,8 +3,10 @@
 After xref:reactive/test/web/setup.adoc[applying the Spring Security support to `WebTestClient`] we can use either annotations or `mutateWith` support.
 For example:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Test
@@ -63,7 +65,8 @@ public void messageWhenMutateWithMockAdminThenOk() throws Exception {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 import org.springframework.test.web.reactive.server.expectBody
@@ -109,6 +112,6 @@ fun messageWhenMutateWithMockAdminThenOk() {
         .expectBody<String>().isEqualTo("Hello World!")
 }
 ----
-====
+======
 
 In addition to `mockUser()`, Spring Security ships with several other convenience mutators for things like xref:reactive/test/web/csrf.adoc[CSRF] and xref:reactive/test/web/oauth2.adoc[OAuth 2.0].
