--- a/docs/modules/ROOT/pages/servlet/authentication/anonymous.adoc
+++ b/docs/modules/ROOT/pages/servlet/authentication/anonymous.adoc
@@ -108,8 +108,10 @@ https://docs.spring.io/spring-framework/docs/current/reference/html/web.html#mvc
 
 This means that a construct like this one:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @GetMapping("/")
@@ -122,7 +124,8 @@ public String method(Authentication authentication) {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @GetMapping("/")
@@ -134,7 +137,7 @@ fun method(authentication: Authentication?): String {
     }
 }
 ----
-====
+======
 
 will always return "not anonymous", even for anonymous requests.
 The reason is that Spring MVC resolves the parameter using `HttpServletRequest#getPrincipal`, which is `null` when the request is anonymous.
@@ -142,8 +145,10 @@ The reason is that Spring MVC resolves the parameter using `HttpServletRequest#g
 If you'd like to obtain the `Authentication` in anonymous requests, use `@CurrentSecurityContext` instead:
 
 .Use CurrentSecurityContext for Anonymous requests
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @GetMapping("/")
@@ -152,11 +157,12 @@ public String method(@CurrentSecurityContext SecurityContext context) {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @GetMapping("/")
 fun method(@CurrentSecurityContext context : SecurityContext) : String =
 		context!!.authentication!!.name
 ----
-====
+======
