--- a/docs/modules/ROOT/pages/servlet/authentication/passwords/digest.adoc
+++ b/docs/modules/ROOT/pages/servlet/authentication/passwords/digest.adoc
@@ -25,21 +25,21 @@ This is a value the server generates.
 Spring Security's nonce adopts the following format:
 
 .Digest Syntax
-====
 [source,txt]
 ----
 base64(expirationTime + ":" + md5Hex(expirationTime + ":" + key))
 expirationTime:   The date and time when the nonce expires, expressed in milliseconds
 key:              A private key to prevent modification of the nonce token
 ----
-====
 
 You will need to ensure you xref:features/authentication/password-storage.adoc#authentication-password-storage-configuration[configure] insecure plain text xref:features/authentication/password-storage.adoc#authentication-password-storage[Password Storage] using `NoOpPasswordEncoder`.
 The following provides an example of configuring Digest Authentication with Java Configuration:
 
 .Digest Authentication
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Autowired
@@ -65,7 +65,8 @@ protected void configure(HttpSecurity http) throws Exception {
 }
 ----
 
-.XML
+XML::
++
 [source,xml,role="secondary"]
 ----
 <b:bean id="digestFilter"
@@ -85,4 +86,4 @@ protected void configure(HttpSecurity http) throws Exception {
 	<custom-filter ref="userFilter" position="DIGEST_AUTH_FILTER"/>
 </http>
 ----
-====
+======
