--- a/docs/modules/ROOT/pages/servlet/authentication/passwords/form.adoc
+++ b/docs/modules/ROOT/pages/servlet/authentication/passwords/form.adoc
@@ -67,8 +67,10 @@ However, as soon as any servlet based configuration is provided, form based log 
 A minimal, explicit Java configuration can be found below:
 
 .Form Log In
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 protected void configure(HttpSecurity http) {
@@ -78,7 +80,8 @@ protected void configure(HttpSecurity http) {
 }
 ----
 
-.XML
+XML::
++
 [source,xml,role="secondary"]
 ----
 <http>
@@ -87,7 +90,8 @@ protected void configure(HttpSecurity http) {
 </http>
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 fun configure(http: HttpSecurity) {
@@ -97,7 +101,7 @@ fun configure(http: HttpSecurity) {
 	}
 }
 ----
-====
+======
 
 In this configuration Spring Security will render a default log in page.
 Most production applications will require a custom log in form.
@@ -106,8 +110,10 @@ Most production applications will require a custom log in form.
 The configuration below demonstrates how to provide a custom log in form.
 
 .Custom Log In Form Configuration
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 protected void configure(HttpSecurity http) throws Exception {
@@ -120,7 +126,8 @@ protected void configure(HttpSecurity http) throws Exception {
 }
 ----
 
-.XML
+XML::
++
 [source,xml,role="secondary"]
 ----
 <http>
@@ -130,7 +137,8 @@ protected void configure(HttpSecurity http) throws Exception {
 </http>
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 fun configure(http: HttpSecurity) {
@@ -143,16 +151,14 @@ fun configure(http: HttpSecurity) {
 	}
 }
 ----
-====
+======
 
 [[servlet-authentication-form-custom-html]]
 When the login page is specified in the Spring Security configuration, you are responsible for rendering the page.
 // FIXME: default login page rendered by Spring Security
 Below is a https://www.thymeleaf.org/[Thymeleaf] template that produces an HTML login form that complies with a login page of `/login`:
 
-.Log In Form
-====
-.src/main/resources/templates/login.html
+.Log In Form - src/main/resources/templates/login.html
 [source,xml]
 ----
 <!DOCTYPE html>
@@ -178,7 +184,6 @@ Below is a https://www.thymeleaf.org/[Thymeleaf] template that produces an HTML 
 	</body>
 </html>
 ----
-====
 
 There are a few key points about the default HTML form:
 
@@ -197,8 +202,10 @@ If you are using Spring MVC, you will need a controller that maps `GET /login` t
 A minimal sample `LoginController` can be seen below:
 
 .LoginController
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Controller
@@ -210,7 +217,8 @@ class LoginController {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Controller
@@ -221,4 +229,4 @@ class LoginController {
     }
 }
 ----
-====
+======
