--- a/docs/modules/ROOT/pages/servlet/authentication/session-management.adoc
+++ b/docs/modules/ROOT/pages/servlet/authentication/session-management.adoc
@@ -7,8 +7,10 @@ Typical usage includes session-fixation protection attack prevention, detection 
 You can configure Spring Security to detect the submission of an invalid session ID and redirect the user to an appropriate URL.
 This is achieved through the `session-management` element:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Override
@@ -20,7 +22,8 @@ protected void configure(HttpSecurity http) throws Exception{
 }
 ----
 
-.XML
+XML::
++
 [source,xml,role="secondary"]
 ----
 <http>
@@ -28,14 +31,16 @@ protected void configure(HttpSecurity http) throws Exception{
 <session-management invalid-session-url="/invalidSession.htm" />
 </http>
 ----
-====
+======
 
 Note that if you use this mechanism to detect session timeouts, it may falsely report an error if the user logs out and then logs back in without closing the browser.
 This is because the session cookie is not cleared when you invalidate the session and will be resubmitted even if the user has logged out.
 You may be able to explicitly delete the JSESSIONID cookie on logging out, for example by using the following syntax in the logout handler:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Override
@@ -47,14 +52,15 @@ protected void configure(HttpSecurity http) throws Exception{
 }
 ----
 
-.XML
+XML::
++
 [source,xml,role="secondary"]
 ----
 <http>
 <logout delete-cookies="JSESSIONID" />
 </http>
 ----
-====
+======
 
 
 Unfortunately this can't be guaranteed to work with every servlet container, so you will need to test it in your environment
@@ -78,8 +84,10 @@ Header always set Set-Cookie "JSESSIONID=;Path=/tutorial;Expires=Thu, 01 Jan 197
 If you wish to place constraints on a single user's ability to log in to your application, Spring Security supports this out of the box with the following simple additions.
 First, you need to add the following listener to your configuration to keep Spring Security updated about session lifecycle events:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Bean
@@ -88,7 +96,8 @@ public HttpSessionEventPublisher httpSessionEventPublisher() {
 }
 ----
 
-.XML
+XML::
++
 [source,xml,role="secondary"]
 ----
 <listener>
@@ -97,12 +106,14 @@ public HttpSessionEventPublisher httpSessionEventPublisher() {
 </listener-class>
 </listener>
 ----
-====
+======
 
 Then add the following lines to your application context:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Override
@@ -114,7 +125,8 @@ protected void configure(HttpSecurity http) throws Exception {
 }
 ----
 
-.XML
+XML::
++
 [source,xml,role="secondary"]
 ----
 <http>
@@ -124,14 +136,16 @@ protected void configure(HttpSecurity http) throws Exception {
 </session-management>
 </http>
 ----
-====
+======
 
 
 This will prevent a user from logging in multiple times - a second login will cause the first to be invalidated.
 Often you would prefer to prevent a second login, in which case you can use
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Override
@@ -144,7 +158,8 @@ protected void configure(HttpSecurity http) throws Exception {
 }
 ----
 
-.XML
+XML::
++
 [source,xml,role="secondary"]
 ----
 <http>
@@ -153,7 +168,7 @@ protected void configure(HttpSecurity http) throws Exception {
 </session-management>
 </http>
 ----
-====
+======
 
 
 The second login will then be rejected.
