--- a/docs/modules/ROOT/pages/servlet/authorization/acls.adoc
+++ b/docs/modules/ROOT/pages/servlet/authorization/acls.adoc
@@ -148,8 +148,10 @@ We do not intend to support non-long identifiers in Spring Security's ACL module
 
 The following fragment of code shows how to create an `Acl`, or modify an existing `Acl`:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 // Prepare the information we'd like in our access control entry (ACE)
@@ -170,7 +172,8 @@ acl.insertAce(acl.getEntries().length, p, sid, true);
 aclService.updateAcl(acl);
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 val oi: ObjectIdentity = ObjectIdentityImpl(Foo::class.java, 44)
@@ -189,7 +192,7 @@ aclService.createAcl(oi)
 acl!!.insertAce(acl.entries.size, p, sid, true)
 aclService.updateAcl(acl)
 ----
-====
+======
 
 
 In the example above, we're retrieving the ACL associated with the "Foo" domain object with identifier number 44.
