--- a/docs/modules/ROOT/pages/servlet/authorization/expression-based.adoc
+++ b/docs/modules/ROOT/pages/servlet/authorization/expression-based.adoc
@@ -114,8 +114,10 @@ So if you aren't using the namespace and want to use expressions, you will have 
 If you wish to extend the expressions that are available, you can easily refer to any Spring Bean you expose.
 For example, assuming you have a Bean with the name of `webSecurity` that contains the following method signature:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 public class WebSecurity {
@@ -125,7 +127,8 @@ public class WebSecurity {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 class WebSecurity {
@@ -134,13 +137,15 @@ class WebSecurity {
     }
 }
 ----
-====
+======
 
 You could refer to the method using:
 
 .Refer to method
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 http
@@ -150,7 +155,8 @@ http
     )
 ----
 
-.XML
+XML::
++
 [source,xml,role="secondary"]
 ----
 <http>
@@ -160,7 +166,8 @@ http
 </http>
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 http {
@@ -169,7 +176,7 @@ http {
     }
 }
 ----
-====
+======
 
 [[el-access-web-path-variables]]
 === Path Variables in Web Security Expressions
@@ -180,8 +187,10 @@ For example, consider a RESTful application that looks up a user by id from the 
 You can easily refer to the path variable by placing it in the pattern.
 For example, if you had a Bean with the name of `webSecurity` that contains the following method signature:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 public class WebSecurity {
@@ -191,7 +200,8 @@ public class WebSecurity {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 class WebSecurity {
@@ -200,13 +210,15 @@ class WebSecurity {
     }
 }
 ----
-====
+======
 
 You could refer to the method using:
 
 .Path Variables
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary",attrs="-attributes"]
 ----
 http
@@ -216,7 +228,8 @@ http
 	);
 ----
 
-.XML
+XML::
++
 [source,xml,role="secondary",attrs="-attributes"]
 ----
 <http>
@@ -226,7 +239,8 @@ http
 </http>
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary",attrs="-attributes"]
 ----
 http {
@@ -235,7 +249,7 @@ http {
     }
 }
 ----
-====
+======
 
 In this configuration URLs that match would pass in the path variable (and convert it) into checkUserId method.
 For example, if the URL were `/user/123/resource`, then the id passed in would be `123`.
@@ -260,41 +274,47 @@ Their use is enabled through the `global-method-security` namespace element:
 The most obviously useful annotation is `@PreAuthorize` which decides whether a method can actually be invoked or not.
 For example (from the {gh-samples-url}/servlet/xml/java/contacts[Contacts] sample application)
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @PreAuthorize("hasRole('USER')")
 public void create(Contact contact);
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @PreAuthorize("hasRole('USER')")
 fun create(contact: Contact?)
 ----
-====
+======
 
 which means that access will only be allowed for users with the role "ROLE_USER".
 Obviously the same thing could easily be achieved using a traditional configuration and a simple configuration attribute for the required role.
 But what about:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @PreAuthorize("hasPermission(#contact, 'admin')")
 public void deletePermission(Contact contact, Sid recipient, Permission permission);
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @PreAuthorize("hasPermission(#contact, 'admin')")
 fun deletePermission(contact: Contact?, recipient: Sid?, permission: Permission?)
 ----
-====
+======
 
 Here we're actually using a method argument as part of the expression to decide whether the current user has the "admin" permission for the given contact.
 The built-in `hasPermission()` expression is linked into the Spring Security ACL module through the application context, as we'll <<el-permission-evaluator,see below>>.
@@ -310,8 +330,10 @@ For example:
 
 +
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 import org.springframework.security.access.method.P;
@@ -322,7 +344,8 @@ import org.springframework.security.access.method.P;
 public void doSomething(@P("c") Contact contact);
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 import org.springframework.security.access.method.P
@@ -332,7 +355,7 @@ import org.springframework.security.access.method.P
 @PreAuthorize("#c.name == authentication.name")
 fun doSomething(@P("c") contact: Contact?)
 ----
-====
+======
 
 +
 
@@ -344,8 +367,10 @@ For example:
 
 +
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 import org.springframework.data.repository.query.Param;
@@ -356,7 +381,8 @@ import org.springframework.data.repository.query.Param;
 Contact findContactByName(@Param("n") String name);
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 import org.springframework.data.repository.query.Param
@@ -366,7 +392,7 @@ import org.springframework.data.repository.query.Param
 @PreAuthorize("#n == authentication.name")
 fun findContactByName(@Param("n") name: String?): Contact?
 ----
-====
+======
 
 +
 
@@ -385,21 +411,24 @@ Any Spring-EL functionality is available within the expression, so you can also 
 For example, if you wanted a particular method to only allow access to a user whose username matched that of the contact, you could write
 --
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @PreAuthorize("#contact.name == authentication.name")
 public void doSomething(Contact contact);
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @PreAuthorize("#contact.name == authentication.name")
 fun doSomething(contact: Contact?)
 ----
-====
+======
 
 Here we are accessing another built-in expression, `authentication`, which is the `Authentication` stored in the security context.
 You can also access its "principal" property directly, using the expression `principal`.
@@ -417,8 +446,10 @@ Spring Security supports filtering of collections, arrays, maps and streams usin
 This is most commonly performed on the return value of a method.
 For example:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @PreAuthorize("hasRole('USER')")
@@ -426,14 +457,15 @@ For example:
 public List<Contact> getAll();
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @PreAuthorize("hasRole('USER')")
 @PostFilter("hasPermission(filterObject, 'read') or hasPermission(filterObject, 'admin')")
 fun getAll(): List<Contact?>
 ----
-====
+======
 
 When using the `@PostFilter` annotation, Spring Security iterates through the returned collection or map and removes any elements for which the supplied expression is false.
 For an array, a new array instance will be returned containing filtered elements.
@@ -507,8 +539,10 @@ For example, consider the following:
 
 Instead of repeating this everywhere, we can create a meta annotation that can be used instead.
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Retention(RetentionPolicy.RUNTIME)
@@ -516,14 +550,15 @@ Instead of repeating this everywhere, we can create a meta annotation that can b
 public @interface ContactPermission {}
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Retention(AnnotationRetention.RUNTIME)
 @PreAuthorize("#contact.name == authentication.name")
 annotation class ContactPermission
 ----
-====
+======
 
 Meta annotations can be used for any of the Spring Security method security annotations.
 In order to remain compliant with the specification JSR-250 annotations do not support meta annotations.
