--- a/docs/modules/ROOT/pages/servlet/integrations/servlet-api.adoc
+++ b/docs/modules/ROOT/pages/servlet/integrations/servlet-api.adoc
@@ -24,8 +24,10 @@ For example, you might have created a custom `UserDetailsService` that returns a
 You could obtain this information with the following:
 
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 Authentication auth = httpServletRequest.getUserPrincipal();
@@ -36,7 +38,8 @@ String firstName = userDetails.getFirstName();
 String lastName = userDetails.getLastName();
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 val auth: Authentication = httpServletRequest.getUserPrincipal()
@@ -46,7 +49,7 @@ val userDetails: MyCustomUserDetails = auth.principal as MyCustomUserDetails
 val firstName: String = userDetails.firstName
 val lastName: String = userDetails.lastName
 ----
-====
+======
 
 [NOTE]
 ====
@@ -60,19 +63,22 @@ The https://docs.oracle.com/javaee/6/api/javax/servlet/http/HttpServletRequest.h
 Typically users should not pass in the "ROLE_" prefix into this method since it is added automatically.
 For example, if you want to determine if the current user has the authority "ROLE_ADMIN", you could use the following:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 boolean isAdmin = httpServletRequest.isUserInRole("ADMIN");
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 val isAdmin: Boolean = httpServletRequest.isUserInRole("ADMIN")
 ----
-====
+======
 
 This might be useful to determine if certain UI components should be displayed.
 For example, you might display admin links only if the current user is an admin.
@@ -93,8 +99,10 @@ If they are not authenticated, the configured AuthenticationEntryPoint will be u
 The https://docs.oracle.com/javaee/6/api/javax/servlet/http/HttpServletRequest.html#login%28java.lang.String,%20java.lang.String%29[HttpServletRequest.login(String,String)] method can be used to authenticate the user with the current `AuthenticationManager`.
 For example, the following would attempt to authenticate with the username "user" and password "password":
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 try {
@@ -104,7 +112,8 @@ httpServletRequest.login("user","password");
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 try {
@@ -113,7 +122,7 @@ try {
     // fail to authenticate
 }
 ----
-====
+======
 
 [NOTE]
 ====
@@ -135,8 +144,10 @@ The https://docs.oracle.com/javaee/6/api/javax/servlet/AsyncContext.html#start%2
 Using Spring Security's concurrency support, Spring Security overrides the AsyncContext.start(Runnable) to ensure that the current SecurityContext is used when processing the Runnable.
 For example, the following would output the current user's Authentication:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 final AsyncContext async = httpServletRequest.startAsync();
@@ -155,7 +166,8 @@ async.start(new Runnable() {
 });
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 val async: AsyncContext = httpServletRequest.startAsync()
@@ -171,7 +183,7 @@ async.start {
     }
 }
 ----
-====
+======
 
 [[servletapi-async]]
 === Async Servlet Support
@@ -217,8 +229,10 @@ Prior to Spring Security 3.2, the SecurityContext from the SecurityContextHolder
 This can cause issues in an Async environment.
 For example, consider the following:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 httpServletRequest.startAsync();
@@ -238,7 +252,8 @@ new Thread("AsyncThread") {
 }.start();
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 httpServletRequest.startAsync()
@@ -256,7 +271,7 @@ object : Thread("AsyncThread") {
     }
 }.start()
 ----
-====
+======
 
 The issue is that this Thread is not known to Spring Security, so the SecurityContext is not propagated to it.
 This means when we commit the HttpServletResponse there is no SecurityContext.
