--- a/docs/modules/ROOT/pages/servlet/saml2/login/authentication.adoc
+++ b/docs/modules/ROOT/pages/servlet/saml2/login/authentication.adoc
@@ -18,8 +18,10 @@ To configure these, you'll use the `saml2Login#authenticationManager` method in 
 It's not uncommon for the asserting and relying parties to have system clocks that aren't perfectly synchronized.
 For that reason, you can configure `OpenSaml4AuthenticationProvider` 's default assertion validator with some tolerance:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableWebSecurity
@@ -48,7 +50,8 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableWebSecurity
@@ -75,7 +78,7 @@ open class SecurityConfig : WebSecurityConfigurerAdapter() {
     }
 }
 ----
-====
+======
 
 [[servlet-saml2login-opensamlauthenticationprovider-userdetailsservice]]
 == Coordinating with a `UserDetailsService`
@@ -83,8 +86,10 @@ open class SecurityConfig : WebSecurityConfigurerAdapter() {
 Or, perhaps you would like to include user details from a legacy `UserDetailsService`.
 In that case, the response authentication converter can come in handy, as can be seen below:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableWebSecurity
@@ -116,7 +121,8 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableWebSecurity
@@ -146,7 +152,7 @@ open class SecurityConfig : WebSecurityConfigurerAdapter() {
     }
 }
 ----
-====
+======
 <1> First, call the default converter, which extracts attributes and authorities from the response
 <2> Second, call the xref:servlet/authentication/passwords/user-details-service.adoc#servlet-authentication-userdetailsservice[`UserDetailsService`] using the relevant information
 <3> Third, return a custom authentication that includes the user details
@@ -190,8 +196,10 @@ To perform additional validation, you can configure your own assertion validator
 [[servlet-saml2login-opensamlauthenticationprovider-onetimeuse]]
 For example, you can use OpenSAML's `OneTimeUseConditionValidator` to also validate a `<OneTimeUse>` condition, like so:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 OpenSaml4AuthenticationProvider provider = new OpenSaml4AuthenticationProvider();
@@ -214,7 +222,8 @@ provider.setAssertionValidator(assertionToken -> {
 });
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 var provider = OpenSaml4AuthenticationProvider()
@@ -236,7 +245,7 @@ provider.setAssertionValidator { assertionToken ->
     result.concat(Saml2Error(INVALID_ASSERTION, context.validationFailureMessage))
 }
 ----
-====
+======
 
 [NOTE]
 While recommended, it's not necessary to call `OpenSaml4AuthenticationProvider` 's default assertion validator.
@@ -254,8 +263,10 @@ The assertion decrypter is for decrypting encrypted elements of the `<saml2:Asse
 You can replace `OpenSaml4AuthenticationProvider`'s default decryption strategy with your own.
 For example, if you have a separate service that decrypts the assertions in a `<saml2:Response>`, you can use it instead like so:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 MyDecryptionService decryptionService = ...;
@@ -263,30 +274,34 @@ OpenSaml4AuthenticationProvider provider = new OpenSaml4AuthenticationProvider()
 provider.setResponseElementsDecrypter((responseToken) -> decryptionService.decrypt(responseToken.getResponse()));
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 val decryptionService: MyDecryptionService = ...
 val provider = OpenSaml4AuthenticationProvider()
 provider.setResponseElementsDecrypter { responseToken -> decryptionService.decrypt(responseToken.response) }
 ----
-====
+======
 
 If you are also decrypting individual elements in a `<saml2:Assertion>`, you can customize the assertion decrypter, too:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 provider.setAssertionElementsDecrypter((assertionToken) -> decryptionService.decrypt(assertionToken.getAssertion()));
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 provider.setAssertionElementsDecrypter { assertionToken -> decryptionService.decrypt(assertionToken.assertion) }
 ----
-====
+======
 
 NOTE: There are two separate decrypters since assertions can be signed separately from responses.
 Trying to decrypt a signed assertion's elements before signature verification may invalidate the signature.
@@ -299,8 +314,10 @@ If your asserting party signs the response only, then it's safe to decrypt all e
 Of course, the `authenticationManager` DSL method can be also used to perform a completely custom SAML 2.0 authentication.
 This authentication manager should expect a `Saml2AuthenticationToken` object containing the SAML 2.0 Response XML data.
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableWebSecurity
@@ -321,7 +338,8 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableWebSecurity
@@ -339,7 +357,7 @@ open class SecurityConfig : WebSecurityConfigurerAdapter() {
     }
 }
 ----
-====
+======
 
 [[servlet-saml2login-authenticatedprincipal]]
 == Using `Saml2AuthenticatedPrincipal`
@@ -349,8 +367,10 @@ Once the relying party validates an assertion, the result is a `Saml2Authenticat
 
 This means that you can access the principal in your controller like so:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Controller
@@ -364,7 +384,8 @@ public class MainController {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Controller
@@ -377,7 +398,7 @@ class MainController {
     }
 }
 ----
-====
+======
 
 [TIP]
 Because the SAML 2.0 specification allows for each attribute to have multiple values, you can either call `getAttribute` to get the list of attributes or `getFirstAttribute` to get the first in the list.
