--- a/docs/modules/ROOT/pages/servlet/saml2/login/overview.adoc
+++ b/docs/modules/ROOT/pages/servlet/saml2/login/overview.adoc
@@ -187,8 +187,10 @@ The resulting `Authentication#getPrincipal` is a Spring Security `Saml2Authentic
 
 Any class that uses both Spring Security and OpenSAML should statically initialize `OpenSamlInitializationService` at the beginning of the class, like so:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 static {
@@ -197,7 +199,8 @@ static {
 ----
 
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 companion object {
@@ -206,7 +209,7 @@ companion object {
     }
 }
 ----
-====
+======
 
 This replaces OpenSAML's `InitializationService#initialize`.
 
@@ -216,8 +219,10 @@ In these circumstances, you may instead want to call `OpenSamlInitializationServ
 For example, when sending an unsigned AuthNRequest, you may want to force reauthentication.
 In that case, you can register your own `AuthnRequestMarshaller`, like so:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 static {
@@ -244,7 +249,8 @@ static {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 companion object {
@@ -270,7 +276,7 @@ companion object {
     }
 }
 ----
-====
+======
 
 The `requireInitialize` method may only be called once per application instance.
 
@@ -283,8 +289,10 @@ The first is a `WebSecurityConfigurerAdapter` that configures the app as a relyi
 When including `spring-security-saml2-service-provider`, the `WebSecurityConfigurerAdapter` looks like:
 
 .Default JWT Configuration
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 protected void configure(HttpSecurity http) {
@@ -296,7 +304,8 @@ protected void configure(HttpSecurity http) {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 fun configure(http: HttpSecurity) {
@@ -308,15 +317,17 @@ fun configure(http: HttpSecurity) {
     }
 }
 ----
-====
+======
 
 If the application doesn't expose a `WebSecurityConfigurerAdapter` bean, then Spring Boot will expose the above default one.
 
 You can replace this by exposing the bean within the application:
 
 .Custom SAML 2.0 Login Configuration
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableWebSecurity
@@ -332,7 +343,8 @@ public class MyCustomSecurityConfiguration extends WebSecurityConfigurerAdapter 
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableWebSecurity
@@ -349,7 +361,7 @@ class MyCustomSecurityConfiguration : WebSecurityConfigurerAdapter() {
     }
 }
 ----
-====
+======
 
 The above requires the role of `USER` for any URL that starts with `/messages/`.
 
@@ -361,8 +373,10 @@ You can override the default by publishing your own `RelyingPartyRegistrationRep
 For example, you can look up the asserting party's configuration by hitting its metadata endpoint like so:
 
 .Relying Party Registration Repository
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Value("${metadata.location}")
@@ -378,7 +392,8 @@ public RelyingPartyRegistrationRepository relyingPartyRegistrations() {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Value("\${metadata.location}")
@@ -393,7 +408,7 @@ open fun relyingPartyRegistrations(): RelyingPartyRegistrationRepository? {
     return InMemoryRelyingPartyRegistrationRepository(registration)
 }
 ----
-====
+======
 
 [[servlet-saml2login-relyingpartyregistrationid]]
 [NOTE]
@@ -402,8 +417,10 @@ The `registrationId` is an arbitrary value that you choose for differentiating b
 Or you can provide each detail manually, as you can see below:
 
 .Relying Party Registration Repository Manual Configuration
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @Value("${verification.key}")
@@ -426,7 +443,8 @@ public RelyingPartyRegistrationRepository relyingPartyRegistrations() throws Exc
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @Value("\${verification.key}")
@@ -453,18 +471,20 @@ open fun relyingPartyRegistrations(): RelyingPartyRegistrationRepository {
     return InMemoryRelyingPartyRegistrationRepository(registration)
 }
 ----
-====
+======
 
 [NOTE]
 Note that `X509Support` is an OpenSAML class, used here in the snippet for brevity
 
-[[servlet-saml2login-relyingpartyregistrationrepository-dsl]]
 
+[[servlet-saml2login-relyingpartyregistrationrepository-dsl]]
 Alternatively, you can directly wire up the repository using the DSL, which will also override the auto-configured `WebSecurityConfigurerAdapter`:
 
 .Custom Relying Party Registration DSL
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 @EnableWebSecurity
@@ -482,7 +502,8 @@ public class MyCustomSecurityConfiguration extends WebSecurityConfigurerAdapter 
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 @EnableWebSecurity
@@ -500,7 +521,7 @@ class MyCustomSecurityConfiguration : WebSecurityConfigurerAdapter() {
     }
 }
 ----
-====
+======
 
 [NOTE]
 A relying party can be multi-tenant by registering more than one relying party in the `RelyingPartyRegistrationRepository`.
@@ -516,8 +537,10 @@ Also, you can provide asserting party metadata like its `Issuer` value, where it
 
 The following `RelyingPartyRegistration` is the minimum required for most setups:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 RelyingPartyRegistration relyingPartyRegistration = RelyingPartyRegistrations
@@ -525,7 +548,9 @@ RelyingPartyRegistration relyingPartyRegistration = RelyingPartyRegistrations
         .registrationId("my-id")
         .build();
 ----
-.Kotlin
+
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 val relyingPartyRegistration = RelyingPartyRegistrations
@@ -533,7 +558,7 @@ val relyingPartyRegistration = RelyingPartyRegistrations
     .registrationId("my-id")
     .build()
 ----
-====
+======
 
 Note that you can also create a `RelyingPartyRegistration` from an arbitrary `InputStream` source.
 One such example is when the metadata is stored in a database:
@@ -551,8 +576,10 @@ try (InputStream source = new ByteArrayInputStream(xml.getBytes())) {
 
 Though a more sophisticated setup is also possible, like so:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 RelyingPartyRegistration relyingPartyRegistration = RelyingPartyRegistration.withRegistrationId("my-id")
@@ -567,7 +594,8 @@ RelyingPartyRegistration relyingPartyRegistration = RelyingPartyRegistration.wit
         .build();
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 val relyingPartyRegistration =
@@ -584,7 +612,7 @@ val relyingPartyRegistration =
         }
         .build()
 ----
-====
+======
 
 [TIP]
 The top-level metadata methods are details about the relying party.
@@ -643,8 +671,10 @@ At a minimum, it's necessary to have a certificate from the asserting party so t
 To construct a `Saml2X509Credential` that you'll use to verify assertions from the asserting party, you can load the file and use
 the `CertificateFactory` like so:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 Resource resource = new ClassPathResource("ap.crt");
@@ -655,7 +685,8 @@ try (InputStream is = resource.getInputStream()) {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 val resource = ClassPathResource("ap.crt")
@@ -665,7 +696,7 @@ resource.inputStream.use {
     )
 }
 ----
-====
+======
 
 Let's say that the asserting party is going to also encrypt the assertion.
 In that case, the relying party will need a private key to be able to decrypt the encrypted value.
@@ -673,8 +704,10 @@ In that case, the relying party will need a private key to be able to decrypt th
 In that case, you'll need an `RSAPrivateKey` as well as its corresponding `X509Certificate`.
 You can load the first using Spring Security's `RsaKeyConverters` utility class and the second as you did before:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 X509Certificate certificate = relyingPartyDecryptionCertificate();
@@ -685,7 +718,8 @@ try (InputStream is = resource.getInputStream()) {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 val certificate: X509Certificate = relyingPartyDecryptionCertificate()
@@ -695,7 +729,7 @@ resource.inputStream.use {
     return Saml2X509Credential.decryption(rsa, certificate)
 }
 ----
-====
+======
 
 [TIP]
 When you specify the locations of these files as the appropriate Spring Boot properties, then Spring Boot will perform these conversions for you.
@@ -715,8 +749,10 @@ The default looks up the registration id from the URI's last path element and lo
 
 You can provide a simpler resolver that, for example, always returns the same relying party:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 public class SingleRelyingPartyRegistrationResolver implements RelyingPartyRegistrationResolver {
@@ -734,7 +770,8 @@ public class SingleRelyingPartyRegistrationResolver implements RelyingPartyRegis
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 class SingleRelyingPartyRegistrationResolver(delegate: RelyingPartyRegistrationResolver) : RelyingPartyRegistrationResolver {
@@ -743,7 +780,7 @@ class SingleRelyingPartyRegistrationResolver(delegate: RelyingPartyRegistrationR
     }
 }
 ----
-====
+======
 
 Then, you can provide this resolver to the appropriate filters that xref:servlet/saml2/login/authentication-requests.adoc#servlet-saml2login-sp-initiated-factory[produce ``<saml2:AuthnRequest>``s], xref:servlet/saml2/login/authentication.adoc#servlet-saml2login-authenticate-responses[authenticate ``<saml2:Response>``s], and xref:servlet/saml2/metadata.adoc#servlet-saml2login-metadata[produce `<saml2:SPSSODescriptor>` metadata].
 
@@ -787,8 +824,10 @@ Second, in a database, it's not necessary to replicate `RelyingPartyRegistration
 
 Third, in Java, you can create a custom configuration method, like so:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 private RelyingPartyRegistration.Builder
@@ -815,7 +854,8 @@ public RelyingPartyRegistrationRepository relyingPartyRegistrations() {
 }
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 private fun addRelyingPartyDetails(builder: RelyingPartyRegistration.Builder): RelyingPartyRegistration.Builder {
@@ -843,4 +883,4 @@ open fun relyingPartyRegistrations(): RelyingPartyRegistrationRepository? {
     return InMemoryRelyingPartyRegistrationRepository(okta, azure)
 }
 ----
-====
+======
