--- a/docs/modules/ROOT/pages/servlet/test/mockmvc/request-builders.adoc
+++ b/docs/modules/ROOT/pages/servlet/test/mockmvc/request-builders.adoc
@@ -4,16 +4,19 @@ Spring MVC Test also provides a `RequestBuilder` interface that can be used to c
 Spring Security provides a few `RequestBuilder` implementations that can be used to make testing easier.
 In order to use Spring Security's `RequestBuilder` implementations ensure the following static import is used:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestBuilders.*;
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 import org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestBuilders.*
 ----
-====
+======
