--- a/docs/modules/ROOT/pages/servlet/test/mockmvc/request-post-processors.adoc
+++ b/docs/modules/ROOT/pages/servlet/test/mockmvc/request-post-processors.adoc
@@ -5,16 +5,19 @@ Spring MVC Test provides a convenient interface called a `RequestPostProcessor` 
 Spring Security provides a number of `RequestPostProcessor` implementations that make testing easier.
 In order to use Spring Security's `RequestPostProcessor` implementations ensure the following static import is used:
 
-====
-.Java
+[tabs]
+======
+Java::
++
 [source,java,role="primary"]
 ----
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.*;
 ----
 
-.Kotlin
+Kotlin::
++
 [source,kotlin,role="secondary"]
 ----
 import org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.*
 ----
-====
+======
